--- a/PaginaEscolar/Register.html
+++ b/PaginaEscolar/Register.html
@@ -149,7 +149,7 @@
         <input type="password" name="password" class="form_input" placeholder="Contraseña" >
       </div>
       <div class="form_field">
-        <button class="Button" type="" style="font-family: 'Poppins', sans-serif;"><a href="LogIn.html">Registrar</a></button>
+        <button class="Button" type="button" style="font-family: 'Poppins', sans-serif;"onclick="window.location.href='LogIn.html'">Registrar</button>
       </div>
     </form>
   </div>
