--- a/PaginaEscolar/Bienvenido.html
+++ b/PaginaEscolar/Bienvenido.html
@@ -157,7 +157,7 @@
   <section class="cuenta-section" id="Salir">
 
     <button class="Salir" style="background-color: #D40719; color: white;"><a
-        href="Principal/Inicio.html">Salir del
+        href="Inicio.html">Salir del
         Sitio</a></button>
   </section>
   <!-- Formulario Modificar-->
