--- a/PaginaEscolar/LogIn.html
+++ b/PaginaEscolar/LogIn.html
@@ -125,7 +125,7 @@ p {
         <input type="password" name="" class="form_input" placeholder="Contraseña" >
       </div>
       <div class="">
-        <button class="submitButton" type="button" style="font-family: 'Poppins', sans-serif;" onclick="window.location.href='Inicio.html'">Iniciar</button>
+        <button class="submitButton" type="button" style="font-family: 'Poppins', sans-serif;" onclick="window.location.href='Bienvenido.html'">Iniciar</button>
       </div>
     </form>
     <p class="text--center">No tienes cuenta? <a href="Register.html">Registrarse</a></p>
